# indigo-test

./: CMakeLists.txt  main.cpp
exe/: CMakeLists.txt
lib/: CMakeLists.txt  SomeLibHeader.h
